Bug 1200354: Modify apache conf to send redirect traffic to bedrock.

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -10,14 +10,15 @@ ExpiresActive on
 ## Fix locales
 
 # bug 774675
-RewriteRule ^/en/(.*)$ /en-US/$1 [L,R=301]
-RewriteRule ^/es/(.*)$ /es-ES/$1 [L,R=301]
-RewriteRule ^/pt/(.*)$ /pt-BR/$1 [L,R=301]
+RewriteRule ^(/en/.*)$ /b$1 [PT]
+RewriteRule ^(/es/.*)$ /b$1 [PT]
+RewriteRule ^(/pt/.*)$ /b$1 [PT]
 
 # bug 880182
-RewriteRule ^/ja-JP-mac(/.*)? /ja$1 [L,R=301]
+RewriteRule ^(/ja-JP-mac/.*)$ /b$1 [PT]
 
 # bug 795970 - lowercase to uppercase, e.g. en-us to en-US
+# done in bedrock, but no good way to foward all such traffic to bedrock
 RewriteMap toupper int:toupper
 RewriteRule ^/([a-z]{2})-([a-z]{2})/(.*) /$1-${toupper:$2}/$3 [L,R=301]
 
@@ -30,105 +31,88 @@ RewriteCond %{HTTP_HOST} ^(.*)\.$
 RewriteRule ^(.*)$ $1 [L,R=301]
 
 # bug 845988 - remove double slashes in URLs
-RewriteRule ^(.*)//(.*)$ $1/$2 [L,R=301]
+# have to specifically match a non-slash on either side of the slashes
+# to force it to match all repeating slashes in one go.
+RewriteCond %{REQUEST_URI} ^(.*[^/])//+([^/].*)$
+RewriteRule / %1/%2 [R=301,L]
 
 # bug 764261, 841393, 996608, 1008162, 1067691, 1113136, 1119022, 1131680, 1115626
-RewriteRule ^/zh-TW/$ http://mozilla.com.tw/ [L,R=301]
-RewriteRule ^/zh-TW/mobile/?$ http://mozilla.com.tw/firefox/mobile/ [L,R=301]
-RewriteRule ^/zh-TW/download/?$ http://mozilla.com.tw/firefox/download/ [L,R=301]
+RewriteRule ^(/zh-TW/)$ /b$1 [PT]
+RewriteRule ^(/zh-TW/mobile/?)$ /b$1 [PT]
+RewriteRule ^(/zh-TW/download/?)$ /b$1 [PT]
 
 # bug 874913
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?products/download.html$ /$1firefox/new/?#download-fx [NE,L,R=301]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?products/download.html)$ /b$1 [PT]
 
 # bug 845580
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?home/?$ /$1firefox/ [L,R=301]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?home/?)$ /b$1 [PT]
 
 # bug 948605
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/xp(.*)$ /firefox/ [L,R=301]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/xp.*)$ /b$1 [PT]
 
 # bug 755826
-RewriteRule ^/zh-CN/$ http://firefox.com.cn/ [L,R=301]
+RewriteRule ^(/zh-CN/)$ /b$1 [PT]
 
 #bug 857246 redirect /products/firefox/start/  to start.mozilla.org
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?products/firefox/start(/?)$ http://start.mozilla.org [L,R=301]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?products/firefox/start/?)$ /b$1 [PT]
 
 # bug 875052
-RewriteCond %{HTTP_USER_AGENT} seamonkey [NC]
-RewriteRule ^/start/(.*)$ http://www.seamonkey-project.org/start/ [E=varyua:1,L,R=301]
-RewriteRule ^/start/(.*)$ /firefox/ [L,R=301]
+RewriteRule ^(/start/.*)$ /b$1 [PT]
 
 # bug 856081 redirect /about/drivers https://wiki.mozilla.org/Firefox/Drivers
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?about/drivers(\.html|/)?$ https://wiki.mozilla.org/Firefox/Drivers [L,R=301]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?about/drivers(?:\.html|/)?)$ /b$1 [PT]
 
 # bug 885797
-RewriteRule ^/community/(?:directory|wikis|blogs|websites)\.html$ https://wiki.mozilla.org/Websites/Directory [L,R=301]
+RewriteRule ^(/community/(?:directory|wikis|blogs|websites)\.html)$ /b$1 [PT]
 
 # bug 885856
-RewriteRule ^/projects/index\.(de|fr|hr|sq)\.html$ /$1/firefox/products/ [L,R=302]
+RewriteRule ^(/projects/index\.(de|fr|hr|sq)\.html)$ /b$1 [PT]
 
 # bug 856075
-RewriteRule ^/projects/technologies\.html$ https://developer.mozilla.org/docs/Mozilla/Using_Mozilla_code_in_other_projects [L,R=301]
+RewriteRule ^(/projects/technologies\.html)$ /b$1 [PT]
 
-# bug 787269
-RewriteRule ^/projects/security/components/signed-script(?:s|-example)\.html$ https://developer.mozilla.org/docs/Bypassing_Security_Restrictions_and_Signing_Code [L,R=301]
-
-# bug 874526, 877698
-RewriteRule ^/projects/security/components(.*)$ http://www-archive.mozilla.org/projects/security/components$1 [L,R=301]
+# bug 874526, 877698, 787269
+RewriteRule ^(/projects/security/components.*)$ /b$1 [PT]
 
 # bug 876889
-RewriteRule ^/projects/testopia/?$ https://developer.mozilla.org/docs/Mozilla/Bugzilla/Testopia [L,R=301]
+RewriteRule ^(/projects/testopia/?)$ /b$1 [PT]
 
 # bug 874525
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?projects/security/pki/nss.*$ https://developer.mozilla.org/docs/NSS [L,R=301]
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?projects/security/pki/jss.*$ https://developer.mozilla.org/docs/JSS [L,R=301]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?projects/security/pki/[nj]ss.*)$ /b$1 [PT]
 
-# bug 866190
-RewriteRule ^/projects/security/pki/python-nss/?$ https://developer.mozilla.org/docs/Python_binding_for_NSS [L,R=301]
-
-# bug 1043035
-RewriteRule ^/projects/security/pki/(?:index.html)?$ https://developer.mozilla.org/docs/PKI [L,R=301]
-RewriteRule ^/projects/security/pki/pkcs11.* https://developer.mozilla.org/docs/Mozilla/Projects/NSS#PKCS_.2311_information [NE,L,R=301]
-RewriteRule ^/projects/security/pki/psm.* https://developer.mozilla.org/docs/Mozilla/Projects/PSM [L,R=301]
-RewriteRule ^/projects/security/pki/src.* https://developer.mozilla.org/docs/Mozilla/Projects/NSS/NSS_Sources_Building_Testing [L,R=301]
-
-# bug 975476
-RewriteRule ^/projects/security/pki/python-nss/doc/api/current/html(.*)$ https://mozilla.github.io/python-nss-docs$1 [L,R=301]
+# bug 866190, 1043035, 975476
+RewriteRule ^(/projects/security/pki/.*)$ /b$1 [PT]
 
 # bug 780672
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/webhero(.*)$ /firefox/ [L,R=301]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/webhero.*)$ /b$1 [PT]
 
 # bug 964107
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/video https://www.youtube.com/firefoxchannel [L,R=301]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/video.*)$ /b$1 [PT]
 
 # bug 948520
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/livebookmarks(.*)$ "https://support.mozilla.org/kb/Live Bookmarks" [L,R=301]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/livebookmarks.*)$ /b$1 [PT]
 
 # bug 782333
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/backtoschool(/?)$ https://addons.mozilla.org/firefox/collections/mozilla/back-to-school/ [L,R=301]
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/backtoschool/firstrun(/?)$ /firefox/firstrun/ [L,R=301]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/backtoschool/?)$ /b$1 [PT]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/backtoschool/firstrun/?)$ /b$1 [PT]
 
 # bug 824126, 837942
-RewriteRule ^/ports/qtmozilla(?:/(?:index.html)?)?$ https://wiki.mozilla.org/Qt [L,R=301]
-RewriteRule ^/ports/os2/?$ https://wiki.mozilla.org/Ports/os2 [L,R=301]
-RewriteCond %{REQUEST_URI} !^/ports/os2/gcc/?
-RewriteCond %{REQUEST_URI} !^/ports/os2/selmail/?
-RewriteRule ^/ports(.*)$ http://www-archive.mozilla.org/ports$1 [L,R=301]
+RewriteRule ^(/ports.*)$ /b$1 [PT]
 
 # bug 832348
 # need the RewriteCond to avoid prefetch.php conflicts.
 RewriteCond %{THE_REQUEST} ^.+/index\.html\ HTTP
-RewriteRule ^(.*)index\.html$ $1 [L,R=301]
+RewriteRule ^(.*index\.html)$ /b$1 [PT]
 
 # bug 1013082
-RewriteRule ^/ja/?$ http://www.mozilla.jp/ [L,R]
+RewriteRule ^(/ja/?)$ /b$1 [PT]
 
 # bug 1051686
-RewriteRule ^/ja/firefox/organizations/?$ http://www.mozilla.jp/business/downloads/ [L,R=301]
+RewriteRule ^(/ja/firefox/organizations/?)$ /b$1 [PT]
 
 # bug 1138280, bug 1200464
 RewriteRule ^/ja/(firefox|thunderbird)/(beta/)?notes/? http://www.mozilla.jp/$1/$2notes/ [L,R=301]
 RewriteRule ^/ja/(firefox|thunderbird)/((android/)?[0-9.]+(beta)?)/releasenotes/? http://www.mozilla.jp/$1/$2/releasenotes/ [L,R=301]
-
 
 ## Redirect things to django!
 
