--- a/static/.htaccess
+++ b/static/.htaccess
@@ -2,6 +2,7 @@
 AddType image/svg+xml .svg
 AddType application/octet-stream .exe
 AddType application/font-woff .woff
+AddType application/font-woff2 .woff2
 AddType application/vnd.ms-fontobject .eot
 AddType application/octet-stream .ttf
 
@@ -33,7 +34,7 @@ FileETag MTime
 </FilesMatch>
 
 # fonts
-<FilesMatch "\.(eot|svg|ttf|woff)$">
+<FilesMatch "\.(eot|svg|ttf|woff|woff2)$">
     ExpiresByType application/octet-stream "access plus 1 year"
 </FilesMatch>
 
