--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -940,5 +940,9 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?thunderbird/email-providers(/?)$ /b/$1thunde
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?thunderbird/all\.html?$ /$1thunderbird/all/ [L,R=301]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?thunderbird/all(/?)$ /b/$1thunderbird/all$2 [PT]
 
+# bug 1124038
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?thunderbird/organizations/(?:all-esr\.html|faq/?)$ /$1thunderbird/organizations/ [L,R=301]
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?thunderbird/organizations(/?)$ /b/$1thunderbird/organizations$2 [PT]
+
 # bug 1162755
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/pocket(/?)$ /b/$1firefox/pocket$2 [PT]
