Fixed the bug #1200464
Changed the redirection setting which navigates users with ja-locale to
wrong Japanese localized releasenotes.

Updated the redirection rule which navigate ja-locale users to Japanese localized releasenotes, to navigate the accesses to Fennec's releasenotes to their Japanese version as well

update redirection rules with review comments

shortened the redirection rule which redirects Japanese releasenotes to mozilla.jp. Also, a bug in a redirection rule is fixed

fixed a redirection bug, which doubled slash in the URL when it redirect ja-locale users to beta releasenotes

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -125,11 +125,10 @@ RewriteRule ^/ja/?$ http://www.mozilla.jp/ [L,R]
 # bug 1051686
 RewriteRule ^/ja/firefox/organizations/?$ http://www.mozilla.jp/business/downloads/ [L,R=301]
 
-# bug 1138280
-RewriteRule ^/ja/(firefox|thunderbird)/(beta/)?notes/ http://mozilla.jp/$1$2/notes/ [L,R=301]
-RewriteRule ^/ja/mobile/(beta/?)notes/ http://mozilla.jp/android/$1$2/notes/ [L,R=301]
-RewriteRule ^/ja/(firefox|thunderbird)/(\d+\.\d+(\.\d+)*)(beta)?/releasenotes(/?|/.+)$ http://mozilla.jp/firefox/$1/$2$3/releasenotes/ [L,R=301]
-RewriteRule ^/ja/mobile/(\d+\.\d+(\.\d+)*)(beta)?/releasenotes(/?|/.+)$ http://mozillla.jp/firefox/android/$1$2/releasenotes/ [L,R=301]
+# bug 1138280, bug 1200464
+RewriteRule ^/ja/(firefox|thunderbird)/(beta/)?notes/? http://www.mozilla.jp/$1/$2notes/ [L,R=301]
+RewriteRule ^/ja/(firefox|thunderbird)/((android/)?[0-9.]+(beta)?)/releasenotes/? http://www.mozilla.jp/$1/$2/releasenotes/ [L,R=301]
+
 
 ## Redirect things to django!
 
