--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -894,6 +894,10 @@ RewriteRule ^/hacking/commit-access-policy/$ /about/governance/policies/commit/a
 RewriteRule ^/hacking/committer/$ /about/governance/policies/commit/ [L,R=301]
 RewriteRule ^/hacking/committer/faq.html$ /about/governance/policies/commit/ [L,R=301]
 RewriteRule ^/hacking/notification/$ /about/governance/policies/commit/ [L,R=301]
+RewriteRule ^/hacking/committer/committers-agreement.odt$ https://static.mozilla.com/foundation/documents/commit-access/committers-agreement.odt [L,R=301]
+RewriteRule ^/hacking/committer/committers-agreement.pdf$ https://static.mozilla.com/foundation/documents/commit-access/committers-agreement.pdf [L,R=301]
+RewriteRule ^/hacking/committer/committers-agreement.txt$ https://static.mozilla.com/foundation/documents/commit-access/committers-agreement.txt [L,R=301]
+RewriteRule ^/hacking/notification/acceptance-email.txt$ https://static.mozilla.com/foundation/documents/commit-access/acceptance-email.txt [L,R=301]
 
 # bug 1165344
 RewriteRule ^/hacking/CVS-Contributor-Form\.(?:pdf|ps)$ /about/governance/policies/commit/ [L,R=301]
