Bug 1201914 Add missing.html archive redirect

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -596,6 +596,7 @@ RewriteRule ^/MPL/1\.0/(.*) http://website-archive.mozilla.org/www.mozilla.org/m
 RewriteRule ^/MPL/2\.0/process/(.*) http://website-archive.mozilla.org/www.mozilla.org/mpl/MPL/2\.0/process/$1 [L,R=301]
 RewriteRule ^/MPL/NPL/(.*) http://website-archive.mozilla.org/www.mozilla.org/mpl/MPL/NPL/$1 [L,R=301]
 RewriteRule ^/MPL/boilerplate-1\.1/(.*) http://website-archive.mozilla.org/www.mozilla.org/mpl/MPL/boilerplate-1\.1/$1 [L,R=301]
+RewriteRule ^/MPL/missing.html http://website-archive.mozilla.org/www.mozilla.org/mpl/MPL/missing.html [L,R=301]
 
 # bug 1148187
 RewriteRule ^/access/(.*) http://website-archive.mozilla.org/www.mozilla.org/access/access/$1 [L,R=301]
