--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,10 +1,5 @@
 db:
-  image: mysql:5.5
-  environment:
-    - MYSQL_DATABASE=bedrock
-    - MYSQL_USER=bedrock
-    - MYSQL_PASSWORD=bedrock
-    - MYSQL_ROOT_PASSWORD=root
+  image: postgres:9.4
 web:
   build: ../
   ports:
@@ -13,7 +8,7 @@ web:
     - db
   environment:
     - PYTHONDONTWRITEBYTECODE=1
-    - DATABASE_URL=mysql://bedrock:bedrock@db/bedrock
+    - DATABASE_URL=postgres://postgres@db/postgres
     - DEBUG=True
     - ALLOWED_HOSTS=localhost,127.0.0.1,
     - SECRET_KEY=39114b6a-2858-4caf-8878-482a24ee9542
