[fix bug 1205632] Update /js/language/ redirects

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -951,3 +951,6 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/pocket(/?)$ /b/$1firefox/pocket$2 [P
 
 # bug 1136436
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/ios(/?)$ /b/$1firefox/ios$2 [PT]
+
+# bug 1205632
+RewriteRule ^(/js/language(/.*)?)$ /b$1 [PT]
