--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -229,6 +229,9 @@ RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?download/?)$ /b$1 [PT]
 # bug 1151534
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/personal(/?)$ /b/$1firefox/personal$2 [PT]
 
+# bug 1205357
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/choose(/?)$ /b/$1firefox/choose$2 [PT]
+
 # bug 957283
 RewriteRule ^/(pt-BR)/firefox/speed(/?)$ /b/$1/firefox/speed$2 [PT]
 
