--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -273,6 +273,9 @@ RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?mobile/customize(?:/.*)?)$ /b$1 [PT]
 # bug 773739
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox(/(?:\d+\.\d+\.?(?:\d+)?\.?(?:\d+)?(?:[a|b]?)(?:\d*)(?:pre)?(?:\d)?))?/whatsnew(/?)$ /b/$1firefox$2/whatsnew$3 [PT]
 
+# bug 1196532
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox(/(?:\d+\.\d+\.?(?:\d+)?\.?(?:\d+)?(?:[a|b]?)(?:\d*)(?:pre)?(?:\d)?))?/whatsnew/b(/?)$ /b/$1firefox$2/whatsnew/b$3 [PT]
+
 # bug 736934, 860865, 1101220, 1153351
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?mobile/(?:(?:beta|aurora)/)?notes/?)$ /b$1 [PT]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/(android/)?((?:beta|aurora|developer|organizations)/)?notes(/?)$ /b/$1firefox/$2$3notes$4 [PT]
@@ -365,7 +368,7 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?mwc(/?)$ /b/$1mwc$2 [NC,PT]
 # bug 939305, 1003703, 1009630
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox(/(?:\d+\.\d+\.?(?:\d+)?\.?(?:\d+)?(?:[a|b]?)(?:\d*)(?:pre)?(?:\d)?))?/firstrun(/|/eu/?)?$ /b/$1firefox$2/firstrun$3 [PT]
 
-# bug 1215633
+# bug 1196547
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox(/(?:\d+\.\d+\.?(?:\d+)?\.?(?:\d+)?(?:[a|b]?)(?:\d*)(?:pre)?(?:\d)?))?/firstrun/learnmore(/?)$ /b/$1firefox$2/firstrun/learnmore$3 [PT]
 
 # bug 748503
