--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -130,7 +130,7 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?facebookapps/(.*)?$ /b/$1facebookapps/$2 [PT
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?projects/(?:powered-by|mozilla-based)(?:\.html|/)?)$ /b$1 [PT]
 
 # bug 837883
-RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/firefox\.exe)$ /b$1 [PT]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/firefox\.exe)$ /b$1 [NC,PT]
 
 # bug 821006
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/all(/|\.html)?$ /b/$1firefox/all$2 [PT]
@@ -145,10 +145,10 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/interest-dashboard(/?)$ /b/$1firefox
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/push(/?)$ /b/$1firefox/push/ [PT]
 
 # bug 727561
-RewriteRule ^(/en-US/firefox/search(?:\.html)?)$ /b$1 [PT]
+RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?firefox/search(?:/|\.html)?)$ /b$1 [PT]
 
 # bug 957664
-RewriteRule ^(/en-US/press/awards(?:\.html)?)$ /b$1 [PT]
+RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?press/awards(?:/|\.html)?)$ /b$1 [PT]
 
 # bug 860865, 1101220
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/all-(?:beta|rc)(?:/|\.html)?)$ /b$1 [PT]
@@ -240,8 +240,8 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/unsupported/(.*)$ /b/$1firefox/unsup
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/unsupported-systems(.*)$ /b/$1firefox/unsupported-systems$2 [PT]
 
 # Bug 1009247, 1101220
-RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?(?:firefox|mobile)/aurora/?)$ /b$1 [PT]
-RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?(?:firefox|mobile)/beta/?)$ /b$1 [PT]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?(?:(?:firefox|mobile)/)?aurora/?)$ /b$1 [PT]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?(?:(?:firefox|mobile)/)?beta/?)$ /b$1 [PT]
 
 # bug 960651
 RewriteCond %{REQUEST_URI} !/unsupported
@@ -257,7 +257,7 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?(firefox/)?dnt(.*)$ /b/$1$2dnt$3 [PT]
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?mobile/?)$ /b$1 [PT]
 
 # bug 961010
-RewriteRule ^(/en-US/mobile/credits(/.*)?)$ /b$1 [PT]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?mobile/credits(/.*)?)$ /b$1 [PT]
 
 # bug 801909
 RewriteRule ^/credits(/faq)?(/)?$ /b/credits$1$2 [L,PT]
@@ -359,11 +359,8 @@ RewriteRule ^/telemetry/?$ /b/telemetry/ [PT]
 # bug 829091
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/partners(.*)$ /b/$1firefox/partners$2 [PT]
 
-# bug 831810 & 1142583
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?mwc/?$ /$1firefox/partners/?utm_source=mozilla.org&utm_medium=referral&utm_campaign=mwc-redirect [NC,L,R=302]
-
-# bug 957763
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?mwc(/?)$ /b/$1mwc$2 [PT]
+# bug 957763 & 831810 & 1142583
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?mwc(/?)$ /b/$1mwc$2 [NC,PT]
 
 # bug 939305
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox(/(?:\d+\.\d+\.?(?:\d+)?\.?(?:\d+)?(?:[a|b]?)(?:\d*)(?:pre)?(?:\d)?))?/firstrun(/?)$ /b/$1firefox$2/firstrun$3 [PT]
@@ -371,41 +368,39 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox(/(?:\d+\.\d+\.?(?:\d+)?\.?(?:\d+)?(?
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox(/.+)/firstrun/eu/?$ /$1firefox$2/firstrun/?utm_source=direct&utm_medium=none&utm_campaign=redirect&utm_content=eu-firstrun-redirect [L,R=301]
 
 # bug 748503
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?projects/firefox/([^/]+)a[0-9]+/(firstrun|whatsnew)(.*)$ /$1firefox/nightly/firstrun$4 [L,R=301]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/nightly/firstrun(.*)$ /b/$1firefox/nightly/firstrun$2 [PT]
 
 # bug 840814
-RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?projects/firefox(?:/(?:\d+\.\d+\.?(?:\d+)?\.?(?:\d+)?(?:[a|b]?)(?:\d*)(?:pre)?(?:\d)?))(?:/(?:firstrun|whatsnew))(:?/.*)?)$ /b$1 [PT]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?projects/firefox/\d[^/]+/(?:firstrun|whatsnew)(:?/.*)?)$ /b$1 [PT]
 
 # bug 845983
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?metrofirefox(/.*)? /$1firefox$2 [L,R=301]
 
 # bug 878926
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefoxflicks/?(.*) https://firefoxflicks.mozilla.org/$1$2 [L,R=301]
+RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?firefoxflicks.*)$ /b$1 [PT]
 
 # bug 849426
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?about/history(\.html)?$ /$1about/history/ [L,R=301]
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?about/bookmarks.html$ https://wiki.mozilla.org/Historical_Documents [L,R=301]
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?about/timeline.html$ https://wiki.mozilla.org/Timeline [L,R=301]
+RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?about/history(\.html)?)$ /b$1 [PT]
+RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?about/bookmarks\.html)$ /b$1 [PT]
+RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?about/timeline\.html)$ /b$1 [PT]
 
 # bug 1016400
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?about/careers.html$ https://careers.mozilla.org/ [QSA,L,R=301]
+RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?about/careers\.html)$ /b$1 [PT]
 
 # bug 861243 and bug 869489
-RewriteRule ^/about/manifesto\.html$ /about/manifesto/ [L,R=301]
-RewriteRule ^/about/manifesto\.(.*)\.html$ /$1/about/manifesto/ [L,R=301]
+RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?about/manifesto(\..+)?\.html)$ /b$1 [PT]
 
 # bug 856077
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?projects/toolkit(/?)$ https://developer.mozilla.org/docs/Toolkit_API [L,R=301]
+RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?projects/toolkit/?)$ /b$1 [PT]
 
 # bug 877165
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/connect.*$ / [L,R=301]
+RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?firefox/connect.*)$ /b$1 [PT]
 
 # bug 657049
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/accountmanager/?$ /$1persona/ [L,R=301]
+RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?firefox/accountmanager/?)$ /b$1 [PT]
 
 # bug 841846
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/nightly(/?)$ https://nightly.mozilla.org [L,R=302]
+RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?firefox/nightly/?)$ /b$1 [PT]
 
 
 # bug 748503
@@ -527,9 +522,8 @@ RewriteRule ^(/projects/devpreview/firstrun(?:/(?:index.html)?)?)$ /b$1 [PT]
 RewriteRule ^(/projects/devpreview/.*)$ /b$1 [PT]
 
 # bug 947890, 1069902
-RewriteRule ^(/en-US/firefox/releases/1\..*)$ /b$1 [PT]
-RewriteRule ^(/en-US/firefox/releases/0\..*)$ /b$1 [PT]
-RewriteRule ^(/(?:\w{2,3}(?:-\w{2}(?:-mac)?)?/)(?:firefox|mobile)/(?:\d)\.(?:.*)/releasenotes.*)$ /b$1 [PT]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2}(?:-mac)?)?/)?firefox/releases/[01]\..*)$ /b$1 [PT]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2}(?:-mac)?)?/)?(?:firefox|mobile)/(?:\d)\.(?:.*)/releasenotes.*)$ /b$1 [PT]
 
 # bug 988746, 989423, 994186, 1153351
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2}(?:-mac)?)?/)?mobile/(?:2[38]\.0(?:\.\d)?|29\.0(?:beta|\.\d)?)/releasenotes/?)$ /b$1 [PT]
@@ -551,13 +545,13 @@ RewriteRule ^(/security/iSECPartners_Phishing\.pdf)$ /b$1 [PT]
 RewriteRule ^/(\w{2,3}(?:-\w{2}(?:-mac)?)?/)?firefox/(24\.[5678]\.\d)/releasenotes(/)?$ /b/$1firefox/$2/releasenotes$3 [L,PT]
 
 # bug 1041712, 1069335, 1069902
-RewriteRule ^(/(?:\w{2,3}(?:-\w{2}(?:-mac)?)?/)(?:firefox|mobile)/(?:[0-9]|1[0-9]|2[0-8])\.(?:\d+(?:beta|a2|\.\d+)?)/(?:release|aurora)notes/.*)$ /b$1 [PT]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2}(?:-mac)?)?/)?(?:firefox|mobile)/(?:[0-9]|1[0-9]|2[0-8])\.(?:\d+(?:beta|a2|\.\d+)?)/(?:release|aurora)notes/.*)$ /b$1 [PT]
 
 # bug 957242
 RewriteRule ^/(\w{2,3}(?:-\w{2}(?:-mac)?)?/)?firefox/(.*)/system-requirements(/)?$ /b/$1firefox/$2/system-requirements$3 [PT]
 
 # bug 1017564
-RewriteRule ^(/en-US/mobile/.*/system-requirements/?)$ /b$1 [PT]
+RewriteRule ^(/(\w{2,3}(?:-\w{2}(?:-mac)?)?/)?mobile/.*/system-requirements/?)$ /b$1 [PT]
 
 # bug 926629
 RewriteRule ^(/en-US/newsletter/about_mobile(?:/(?:index.html)?)?)$ /b$1 [PT]
@@ -591,7 +585,7 @@ RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?about/policies/participation.html)$ /b$1 [P
 RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?about/policies/policies.html)$ /b$1 [PT]
 
 # bug 882923
-RewriteRule ^(/en-US/opt-out.html)$ /b$1 [PT]
+RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?opt-out\.html)$ /b$1 [PT]
 
 # bug 884933
 RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?firefox/mobile/platforms(/?))$ /b$1 [PT]
@@ -603,13 +597,12 @@ RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?firefox/phishing-protection(/?))$ /b$1 [PT]
 RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?mobile/home/?(?:index.html)?)$ /b$1 [PT]
 
 # bug 949562
-RewriteRule ^(/en-US/mobile/home/1\.0/releasenotes(?:/(?:index.html)?)?)$ /b$1 [PT]
-RewriteRule ^(/en-US/mobile/home/1\.0\.2/releasenotes(?:/(?:index.html)?)?)$ /b$1 [PT]
-RewriteRule ^(/en-US/mobile/home/faq(?:/(?:index.html)?)?)$ /b$1 [PT]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?mobile/home/1\.0(\.2)?/releasenotes(?:/(?:index.html)?)?)$ /b$1 [PT]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?mobile/home/faq(?:/(?:index.html)?)?)$ /b$1 [PT]
 
 # bug 960064
-RewriteRule ^(/en-US/firefox/(vpat-[\.1-5]+)(?:\.html)?)$ /b$1 [PT]
-RewriteRule ^(/en-US/firefox/vpat(?:\.html)?)$ /b$1 [PT]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/(vpat-[\.1-5]+)(?:\.html)?)$ /b$1 [PT]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/vpat(?:\.html)?)$ /b$1 [PT]
 
 # bug 924687
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?opportunities(?:/(?:index\.html)?)?)$ /b$1 [PT]
