--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -63,7 +63,7 @@ RewriteRule ^(/start/.*)$ /b$1 [PT]
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?about/drivers(?:\.html|/)?)$ /b$1 [PT]
 
 # bug 885797
-RewriteRule ^(/community/(?:directory|wikis|blogs|websites)\.html)$ /b$1 [PT]
+RewriteRule ^(/community(?:/(?:directory|wikis|blogs|websites)\.html)?)?$ /b$1 [PT]
 
 # bug 885856
 RewriteRule ^(/projects/index\.(de|fr|hr|sq)\.html)$ /b$1 [PT]
@@ -157,6 +157,8 @@ RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/aurora/(all|notes|system-requirem
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/organizations/all(?:/|\.html)?)$ /b$1 [PT]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/(developer|beta)/all(/?)$ /b/$1firefox/$2/all$3 [PT]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/organizations(.*)$ /b/$1firefox/organizations$2 [PT]
+
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?m/(faq|features|platforms)/?)$ /b$1 [PT]
 
 # bug 803345
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?apps(.*)$ /b/$1apps$2 [PT]
@@ -254,7 +256,7 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?webmaker(.*)$ /b/$1webmaker$2 [PT]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?(firefox/)?dnt(.*)$ /b/$1$2dnt$3 [PT]
 
 # bug 767614 superceeded by bug 957711 and 1003718
-RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?mobile/?)$ /b$1 [PT]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?(mobile|fennec)/?)$ /b$1 [PT]
 
 # bug 961010
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?mobile/credits(/.*)?)$ /b$1 [PT]
@@ -646,8 +648,8 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox(/(?:\d+\.\d+\.?(?:\d+)?\.?(?:\d+)?(?
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/desktop(/?.*)$ /b/$1firefox/desktop$2 [PT]
 
 # Bug 986174
-RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/mobile/features/?)$ /b$1 [PT]
-RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/mobile/faq/?)$ /b$1 [PT]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?(firefox/)?mobile/features/?)$ /b$1 [PT]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?(firefox/)?mobile/faq/?)$ /b$1 [PT]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/android(/?)$ /b/$1firefox/android$2 [PT]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/android/faq(/?)$ /b/$1firefox/android/faq$2 [PT]
 
@@ -743,3 +745,10 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/ios(/?)$ /b/$1firefox/ios$2 [PT]
 
 # bug 1205632
 RewriteRule ^(/js/language(/.*)?)$ /b$1 [PT]
+
+RewriteRule ^(/rhino(/.*)?)$ /b$1 [PT]
+
+# Bug 730488 deprecate /firefox/all-older.html
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/all-older\.html)$ /b$1 [PT]
+
+
