Redirect /mobile/platforms/ to sumo. bug 884933

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -590,7 +590,7 @@ RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?about/policies/policies.html)$ /b$1 [PT]
 RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?opt-out\.html)$ /b$1 [PT]
 
 # bug 884933
-RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?firefox/mobile/platforms(/?))$ /b$1 [PT]
+RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?(?:firefox/)?mobile/platforms(/?))$ /b$1 [PT]
 
 # bug 876581
 RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?firefox/phishing-protection(/?))$ /b$1 [PT]
