--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -498,12 +498,11 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?foundation/documents/(index|mozilla-200.-fin
 # bug 442671
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?foundation/trademarks/l10n-policy(/?)$ /$1foundation/trademarks/ [L,R=301]
 
-# bug 960689
-RewriteRule ^/en-US/legal/bylaws_amendment_1(?:\.html)?$ /foundation/documents/bylaws-amendment-1/ [L,R=301]
-RewriteRule ^/en-US/legal/bylaws_amendment_2(?:\.html)?$ /foundation/documents/bylaws-amendment-2/ [L,R=301]
-RewriteRule ^/en-US/legal/articles(?:\.html)?$ /foundation/documents/articles-of-incorporation/ [L,R=301]
-RewriteRule ^/en-US/legal/amendment(?:\.html)?$ /foundation/documents/articles-of-incorporation/amendment/ [L,R=301]
-RewriteRule ^/en-US/legal/bylaws(?:\.html)?$ /foundation/documents/bylaws/ [L,R=301]
+# bug 960689, 1209643
+RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?legal/bylaws_amendment_(?:[12])(?:\.html)?)$ /b$1 [PT]
+RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?legal/articles(?:\.html)?)$ /b$1 [PT]
+RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?legal/amendment(?:\.html)?)$ /b$1 [PT]
+RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?legal/bylaws(?:\.html)?)$ /b$1 [PT]
 
 
 # Add /b to all foundation URLs to serve them from Bedrock.
@@ -750,5 +749,3 @@ RewriteRule ^(/rhino(/.*)?)$ /b$1 [PT]
 
 # Bug 730488 deprecate /firefox/all-older.html
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/all-older\.html)$ /b$1 [PT]
-
-
