Create initial functional tests using pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,8 +6,11 @@ max-line-length=150
 with-id=1
 logging-clear-handlers=1
 verbosity=3
-ignore-files=test_globalconf
+exclude-dir=test_redirects
+            tests/functional
 
 [pytest]
-addopts = --showlocals -rfEsxXw --ignore=node_modules
+addopts = --showlocals -r a --ignore=node_modules
 DJANGO_SETTINGS_MODULE = bedrock.settings
+base_url = http://127.0.0.1:8000
+sensitive_url = mozilla\.(com|org)
