--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -458,8 +458,7 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?thunderbird/about/privacy-policy/?$ /$1priva
 RewriteRule ^/en-US/about/buttons/(.*) /media/img/careers/buttons/$1 [L,R=301]
 
 # bug 960689, 1013349, 896474
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?about/legal\.html$ /$1about/legal/ [L,R=301]
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?about/partnerships\.html$ /$1about/partnerships/ [L,R=301]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?about/(?:legal|partnerships)\.html)$ /b$1 [PT]
 
 # bug 809426
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?legal/eula(/?)$ /b/$1legal/eula$2 [PT]
