Bug 1224565 - Create webpage for State of Mozilla 2014 report

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -347,6 +347,9 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?foundation/annualreport/2011(.*)$ /b/$1found
 # bug 928120
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?foundation/annualreport/2012(.*)$ /b/$1foundation/annualreport/2012$2 [PT]
 
+# bug 1224565
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?foundation/annualreport/2013(.*)$ /b/$1foundation/annualreport/2013$2 [PT]
+
 # bug 815731 /ITU/
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?ITU(.*)$ /b/$1ITU$2 [PT]
 
