Bug 1215136 - SmartOn Tracking
* Adds a form-title wrapper and title and subtitle params to the global newsletter macro.

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -723,3 +723,6 @@ RewriteRule ^(/rhino(/.*)?)$ /b$1 [PT]
 
 # Bug 730488 deprecate /firefox/all-older.html
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/all-older\.html)$ /b$1 [PT]
+
+# bug 1188572
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?teach(/?|/.+)$ /b/$1teach$2 [PT]
