[fix bug 1215633] Temporarily redirect /firefox/firstrun/learnmore/ to SUMO

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -372,6 +372,9 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox(/(?:\d+\.\d+\.?(?:\d+)?\.?(?:\d+)?(?
 # bug 1003703, 1009630
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox(/.+)/firstrun/eu/?$ /$1firefox$2/firstrun/?utm_source=direct&utm_medium=none&utm_campaign=redirect&utm_content=eu-firstrun-redirect [L,R=301]
 
+# bug 1215633
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox(/(?:\d+\.\d+\.?(?:\d+)?\.?(?:\d+)?(?:[a|b]?)(?:\d*)(?:pre)?(?:\d)?))?/firstrun/learnmore(/?)$ /b/$1firefox$2/firstrun/learnmore$3 [PT]
+
 # bug 748503
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/nightly/firstrun(.*)$ /b/$1firefox/nightly/firstrun$2 [PT]
 
