--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -311,6 +311,9 @@ RewriteRule ^/.*/plugincheck/ https://%{SERVER_NAME}%{REQUEST_URI} [L,R=301]
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/os/(releases|notes)/?)$ /b$1 [PT]
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/os/(?:release)?notes/(.*)/?)$ /b$1 [PT]
 
+# bug 1206781
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/os/b2gdroid(/?)$ /b/$1firefox/os/b2gdroid$2 [PT]
+
 # bug 878871
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/os(.*)$ /b/$1firefox/os$2 [PT]
 RewriteRule ^(/(\w{2,3}(?:-\w{2})?/)?firefoxos.*)$ /b$1 [PT]
