Change /firefox/releasenotes/ from 500 to 302

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -603,7 +603,7 @@ RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?mobile/android-download(-beta)?\.html)$ /
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?projects/calendar(/.*)?)$ /b$1 [PT]
 
 # bug 947890
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/latest/releasenotes(/?)$ /b/$1firefox/latest/releasenotes$2 [PT]
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/(latest/)?releasenotes(/?)$ /b/$1firefox/$2releasenotes$3 [PT]
 
 # bug 962307
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?gigabit(.*)$ /b/$1gigabit$2 [PT]
