--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -288,7 +288,7 @@ RewriteRule ^/en-US/firefox/channel/android(/?)$ /b/en-US/firefox/channel/androi
 # bug 1059518
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/tiles(.*)$ /b/$1firefox/tiles$2 [PT]
 
-# bug 1196569 
+# bug 1196569
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/private-browsing(/?)$ /b/$1firefox/private-browsing$2 [PT]
 
 # bug 784737
@@ -726,3 +726,5 @@ RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/all-older\.html)$ /b$1 [PT]
 
 # bug 1188572
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?teach(/?|/.+)$ /b/$1teach$2 [PT]
+
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?press(/.*)?)$ /b$1 [PT]
