Pass all firefox/ios urls through to bedrock

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -713,8 +713,8 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?thunderbird(/.*)?$ /b/$1thunderbird$2 [PT]
 # bug 1162755
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/pocket(/?)$ /b/$1firefox/pocket$2 [PT]
 
-# bug 1136436
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/ios(/?)$ /b/$1firefox/ios$2 [PT]
+# bug 1136436, bug 1216956
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/ios(.*)$ /b/$1firefox/ios$2 [PT]
 
 # bug 1217229
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/mobile-download(/?)$ /b/$1firefox/mobile-download$2 [PT]
