Revert "[bug-1222637] Fixed horizontal scrolling on private-browsing.html"
This reverts commit 520035e5f51e3914fd27ec4a2127317230809d72.

Conflicts:
	media/css/firefox/private_browsing/private-browsing.less

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -273,6 +273,9 @@ RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?mobile/customize(?:/.*)?)$ /b$1 [PT]
 # bug 773739
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox(/(?:\d+\.\d+\.?(?:\d+)?\.?(?:\d+)?(?:[a|b]?)(?:\d*)(?:pre)?(?:\d)?))?/whatsnew(/?)$ /b/$1firefox$2/whatsnew$3 [PT]
 
+# bug 1196532
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox(/(?:\d+\.\d+\.?(?:\d+)?\.?(?:\d+)?(?:[a|b]?)(?:\d*)(?:pre)?(?:\d)?))?/whatsnew/b(/?)$ /b/$1firefox$2/whatsnew/b$3 [PT]
+
 # bug 736934, 860865, 1101220, 1153351
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?mobile/(?:(?:beta|aurora)/)?notes/?)$ /b$1 [PT]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/(android/)?((?:beta|aurora|developer|organizations)/)?notes(/?)$ /b/$1firefox/$2$3notes$4 [PT]
