[fix bug 1221739] Add a redirect for Hello's Feedback survey links

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -208,6 +208,9 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/hello(/?)$ /b/$1firefox/hello$2 [PT]
 # bug 1186373
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/hello/npssurvey(/?)$ /b/$1firefox/hello/npssurvey$2 [PT]
 
+# bug 1221739
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/hello/feedbacksurvey(/?)$ /b/$1firefox/hello/feedbacksurvey$2 [PT]
+
 # bug 1071074
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/channel(/?)$ /b/$1firefox/channel$2 [PT]
 
