[fix bug 1231171] Implement Firefox Accounts signup page

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -734,3 +734,6 @@ RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/all-older\.html)$ /b$1 [PT]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?teach(/?|/.+)$ /b/$1teach$2 [PT]
 
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?press(/.*)?)$ /b$1 [PT]
+
+# bug 1231171
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/accounts(.*)$ /b/$1firefox/accounts$2 [PT]
