--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -179,7 +179,7 @@ RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/toolkit/download-to-your-devices.
 # Has to be this way because of old
 # legacy platform url conflicts.
 # bug 921564
-RewriteRule ^/(ach|af|ak|an|ar|as|ast|az|be|bg|bn-BD|bn-IN|br|brx|bs|ca|cs|csb|cy|da|de|dsb|ee|el|en-GB|en-US|en-ZA|eo|es-AR|es-CL|es-ES|es-MX|et|eu|fa|ff|fi|fr|fy-NL|ga-IE|gd|gl|gu-IN|ha|he|hi-IN|hr|hsb|hu|hy-AM|id|ig|is|it|ja|ja-JP-mac|ka|kk|km|kn|ko|ku|lg|lij|ln|lt|lv|mai|mk|ml|mn|mr|ms|my|nb-NO|nl|nn-NO|nso|oc|or|pa-IN|pl|pt-BR|pt-PT|rm|ro|ru|sah|sat|si|sk|sl|son|sq|sr|sv-SE|sw|ta|ta-LK|te|th|tr|uk|ur|uz|vi|wo|xh|yo|zh-CN|zh-TW|zu)(/?)$ /b/$1$2 [PT]
+RewriteRule ^/(ach|af|ak|an|ar|as|ast|az|be|bg|bn-BD|bn-IN|br|brx|bs|ca|cak|cs|csb|cy|da|de|dsb|ee|el|en-GB|en-US|en-ZA|eo|es-AR|es-CL|es-ES|es-MX|et|eu|fa|ff|fi|fr|fy-NL|ga-IE|gd|gl|gu-IN|ha|he|hi-IN|hr|hsb|hu|hy-AM|id|ig|is|it|ja|ja-JP-mac|ka|kk|km|kn|ko|ku|lg|lij|ln|lt|lv|mai|mk|ml|mn|mr|ms|my|nb-NO|nl|nn-NO|nso|oc|or|pa-IN|pl|pt-BR|pt-PT|rm|ro|ru|sah|sat|si|sk|sl|son|sq|sr|sv-SE|sw|ta|ta-LK|te|th|tr|uk|ur|uz|vi|wo|xh|yo|zh-CN|zh-TW|zu)(/?)$ /b/$1$2 [PT]
 
 # bug 1091977
 RewriteRule ^(/ja/contribute(?:/.*)?)$ /b$1 [PT]
