Fix Bug 1233959, add infobar entry to global.conf

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -356,6 +356,9 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?ITU(.*)$ /b/$1ITU$2 [PT]
 # bug 821838
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?tabzilla/(.*)$ /b/$1tabzilla/$2 [PT]
 
+# bug 1233959
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?infobar/(.*)$ /b/$1infobar/$2 [PT]
+
 # bug 821937
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?m/privacy.html$ /b/$1m/privacy.html [PT]
 
