Fix bug 1235849: Add namespace URLs

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -740,3 +740,14 @@ RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?press(/.*)?)$ /b$1 [PT]
 
 # bug 1231171
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/accounts(.*)$ /b/$1firefox/accounts$2 [PT]
+
+# bug 1235849
+# XML namespace URI rewrites to prevent 404 errors
+RewriteRule ^(/2004/em-rdf)$ /b$1 [PT]
+RewriteRule ^(/2005/app-update)$ /b$1 [PT]
+RewriteRule ^(/2006/addons-blocklist)$ /b$1 [PT]
+RewriteRule ^(/2006/browser/search/)$ /b$1 [PT]
+RewriteRule ^(/keymaster/gatekeeper/there\.is\.only\.xul)$ /b$1 [PT]
+RewriteRule ^(/microsummaries/0\.1)$ /b$1 [PT]
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?projects/xforms/2005/type)$ /b$1 [PT]
+RewriteRule ^(/xbl)$ /b$1 [PT]
