Bug 1200354: Add SeaMonkey redirects from .htaccess

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -751,3 +751,5 @@ RewriteRule ^(/keymaster/gatekeeper/there\.is\.only\.xul)$ /b$1 [PT]
 RewriteRule ^(/microsummaries/0\.1)$ /b$1 [PT]
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?projects/xforms/2005/type)$ /b$1 [PT]
 RewriteRule ^(/xbl)$ /b$1 [PT]
+
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?projects/seamonkey(/.*)?)$ /b$1 [PT]
