--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -753,3 +753,7 @@ RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?projects/xforms/2005/type)$ /b$1 [PT]
 RewriteRule ^(/xbl)$ /b$1 [PT]
 
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?projects/seamonkey(/.*)?)$ /b$1 [PT]
+
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?support(?:/.*)?)$ /b$1 [PT]
+
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/beta/feedbackprivacypolicy/?)$ /b$1 [PT]
