Add RewriteRule for /firefox/android/beta/all/
Fix the intermittent 404. Follow up #3780. Part of Bug 1226476.

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -633,7 +633,7 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/android(/?)$ /b/$1firefox/android$2 
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/android/faq(/?)$ /b/$1firefox/android/faq$2 [PT]
 
 #Bug 686489
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/android/all(/?)$ /b/$1firefox/android/all$2 [PT]
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/android/(beta/)?all(/?)$ /b/$1firefox/android/$2all$3 [PT]
 
 # Bug 979527
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/central/?)$ /b$1 [PT]
