Add certs to bedrock: bug 1149019

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -757,3 +757,6 @@ RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?projects/seamonkey(/.*)?)$ /b$1 [PT]
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?support(?:/.*)?)$ /b$1 [PT]
 
 RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/beta/feedbackprivacypolicy/?)$ /b$1 [PT]
+
+# bug 1149019
+RewriteRule ^(/certs/.*)$ /b$1 [PT]
