--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -760,3 +760,6 @@ RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?firefox/beta/feedbackprivacypolicy/?)$ /b
 
 # bug 1149019
 RewriteRule ^(/certs/.*)$ /b$1 [PT]
+
+# bug 1252332
+RewriteRule ^(/(?:\w{2,3}(?:-\w{2})?/)?sync/?)$ /b$1 [PT]
