--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "url": "https://bugzilla.mozilla.org/"
   },
   "devDependencies": {
+    "eslint": "^2.2.0",
     "grunt": "~0.4.2",
     "grunt-cli": "~0.1.11",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-eslint": "^18.0.0",
     "grunt-jsonlint": "^1.0.4",
     "grunt-karma": "^0.12.1",
     "jasmine-core": "^2.3.4",
