Mark bedrock-prod as sensitive URL for functional tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,4 +12,4 @@ exclude-dir=tests/redirects
 [pytest]
 addopts = --showlocals -r a --ignore=node_modules
 DJANGO_SETTINGS_MODULE = bedrock.settings
-sensitive_url = mozilla\.(com|org)
+sensitive_url = (mozilla\.(com|org)|bedrock-prod)
