--- a/circle.yml
+++ b/circle.yml
@@ -18,10 +18,10 @@ machine:
     DEIS_CONTROLLER: https://deis.us-west.moz.works
     DEIS_USERNAME: circleci
     # Docker
-    DOCKER_REPOSITORY: mozorg/bedrock
-    DOCKER_IMAGE_TAG: "$DOCKER_REPOSITORY:demo-$CIRCLE_SHA1"
-    DOCKER_EMAIL: foo@example.com
-    DOCKER_USERNAME: moztravis
+    QUAY_EMAIL: mozmar@example.com
+    QUAY_USERNAME: mozmar+circleci
+    DOCKER_REPOSITORY: quay.io/mozmar/bedrock
+    DOCKER_IMAGE_TAG: "$DOCKER_REPOSITORY:$CIRCLE_BRANCH"
 
 checkout:
   post:
