Trigger Jenkins deployment pipeline from CircleCI
Instead of from Github directly since we have a bit more control.
This allows us to be sure that only pushes to master, and no other
branch, will trigger the full build pipeline.

--- a/circle.yml
+++ b/circle.yml
@@ -60,3 +60,8 @@ deployment:
     owner: mozilla
     commands:
       - bin/circleci-demo-deploy.sh
+  jenkins:
+    branch: master
+    owner: mozilla
+    commands:
+      - bin/circleci-trigger-jenkins.sh
