--- a/circle.yml
+++ b/circle.yml
@@ -44,6 +44,7 @@ dependencies:
 test:
   pre:
     - flake8 bedrock lib tests
+    - grunt eslint
     - python manage.py runscript check_calendars
     - python manage.py version
     - python manage.py migrate --noinput
