--- a/circle.yml
+++ b/circle.yml
@@ -35,6 +35,7 @@ dependencies:
     - node_modules
     - "~/docker"
   override:
+    - npm install -g grunt-cli
     - npm install
     - sudo apt-get update
     - sudo apt-get install -y libmemcached-dev
