Switch to using Gulp as a task runner and update dev dependencies

--- a/package.json
+++ b/package.json
@@ -22,21 +22,14 @@
     "url": "https://bugzilla.mozilla.org/"
   },
   "devDependencies": {
-    "eslint": "^2.2.0",
-    "grunt": "~0.4.2",
-    "grunt-cli": "~0.1.11",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-eslint": "^18.0.0",
-    "grunt-jsonlint": "^1.0.4",
-    "grunt-karma": "^0.12.1",
-    "jasmine-core": "^2.3.4",
-    "karma": "^0.13.10",
-    "karma-coverage": "^0.5.2",
-    "karma-firefox-launcher": "^0.1.6",
-    "karma-jasmine": "^0.3.6",
-    "load-grunt-tasks": "^1.0.0",
-    "requirejs": "~2.1.11",
-    "sinon": "^1.17.1"
+    "eslint": "^2.8.0",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^2.0.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-coverage": "^0.5.5",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.8",
+    "sinon": "^1.17.3"
   }
 }
