--- a/circle.yml
+++ b/circle.yml
@@ -35,7 +35,7 @@ dependencies:
     - node_modules
     - "~/docker"
   override:
-    - npm install -g grunt-cli
+    - npm install -g gulp-cli
     - npm install
     - sudo apt-get update
     - sudo apt-get install -y libmemcached-dev
@@ -49,14 +49,14 @@ dependencies:
 test:
   pre:
     - flake8 bedrock lib tests
-    - grunt eslint
+    - gulp lint
     - python manage.py runscript check_calendars
     - python manage.py version
     - python manage.py migrate --noinput
     - python manage.py collectstatic --noinput -v 0
     - mkdir -p "$CIRCLE_TEST_REPORTS/django"
   override:
-    - grunt test
+    - gulp test
     - python manage.py test
     - py.test --junitxml="$CIRCLE_TEST_REPORTS/redirects.xml" -r a -m smoke tests/redirects
 
