Exclude tests/pages when collecting nose tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ logging-clear-handlers=1
 verbosity=3
 exclude-dir=tests/redirects
             tests/functional
+            tests/pages
 
 [pytest]
 addopts = --showlocals -r a --ignore=node_modules
