--- a/circle.yml
+++ b/circle.yml
@@ -49,14 +49,14 @@ dependencies:
 test:
   pre:
     - flake8 bedrock lib tests
-    - gulp lint
+    - gulp js:lint
     - python manage.py runscript check_calendars
     - python manage.py version
     - python manage.py migrate --noinput
     - python manage.py collectstatic --noinput -v 0
     - mkdir -p "$CIRCLE_TEST_REPORTS/django"
   override:
-    - gulp test
+    - gulp js:test
     - python manage.py test
     - py.test --junitxml="$CIRCLE_TEST_REPORTS/redirects.xml" -r a -m smoke tests/redirects
 
