--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^2.8.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
+    "gulp-watch": "^4.3.6",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-coverage": "^0.5.5",
