Don't generate headless tests when running IE SauceLabs jobs

--- a/docker/jenkins/properties/integration_tests/per_tag/ie7.properties
+++ b/docker/jenkins/properties/integration_tests/per_tag/ie7.properties
@@ -2,4 +2,4 @@ DRIVER=SauceLabs
 BROWSER_NAME=internet explorer
 BROWSER_VERSION=7.0
 PLATFORM=Windows XP
-MARK_EXPRESSION=sanity
+MARK_EXPRESSION=sanity and not headless
