--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cssmin": "0.4.3",
     "less": "2.4.0",
     "lockdown": "https://github.com/mozilla/npm-lockdown/archive/v0.0.8.tar.gz",
+    "node-sass": "3.8.0",
     "uglify-js": "2.4.16"
   },
   "repository": {
