Switch from django-nose to py.test
Remove most of nose libs. Nose itself is still required
for nose.tools functions.

--- a/circle.yml
+++ b/circle.yml
@@ -57,7 +57,7 @@ test:
     - mkdir -p "$CIRCLE_TEST_REPORTS/django"
   override:
     - gulp js:test
-    - python manage.py test
+    - py.test lib bedrock
     - py.test --junitxml="$CIRCLE_TEST_REPORTS/redirects.xml" -r a -m smoke tests/redirects
 
 deployment:
