--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "preinstall": "lockdown"
   },
   "dependencies": {
-    "less": "2.7.1",
+    "cssmin": "0.4.3",
+    "less": "2.4.0",
     "lockdown": "https://github.com/mozilla/npm-lockdown/archive/v0.0.8.tar.gz",
-    "yuglify": "0.1.4"
+    "uglify-js": "2.4.16"
   },
   "repository": {
     "type": "git",
