--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "preinstall": "lockdown"
   },
   "dependencies": {
-    "cssmin": "0.4.3",
-    "less": "2.4.0",
+    "less": "2.7.1",
     "lockdown": "https://github.com/mozilla/npm-lockdown/archive/v0.0.8.tar.gz",
     "node-sass": "3.8.0",
-    "uglify-js": "2.4.16"
+    "yuglify": "0.1.4"
   },
   "repository": {
     "type": "git",
