--- a/circle.yml
+++ b/circle.yml
@@ -52,7 +52,7 @@ test:
     - gulp js:lint
     - python manage.py runscript check_calendars
     - python manage.py version
-    - python manage.py migrate --noinput
+    - python manage.py migrate --noinput --database bedrock
     - python manage.py collectstatic --noinput -v 0
     - mkdir -p "$CIRCLE_TEST_REPORTS/django"
   override:
