--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ exclude-dir=tests/redirects
             tests/functional
             tests/pages
 
-[pytest]
+[tool:pytest]
 addopts = --showlocals -r a --ignore=node_modules
 DJANGO_SETTINGS_MODULE = bedrock.settings
 sensitive_url = (mozilla\.(com|org)|bedrock-prod)
