Add command to download, verify, and update product-details
Downloads the files locally, checks them, then loads the modified files
into the database.

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ test-results.xml
 tests/unit/coverage
 bedrock/externalfiles/files_cache
 mofo_security_advisories
+product_details_json
 .idea
 .env
 .cache
