Run all python tests in docker in circleci

--- a/.editorconfig
+++ b/.editorconfig
@@ -31,3 +31,6 @@ indent_size = 2
 # Matches the exact files package.json and .travis.yml
 [{package.json, .travis.yml}]
 indent_size = 2
+
+[Makefile]
+indent_style = tab
