--- a/circle.yml
+++ b/circle.yml
@@ -1,19 +1,9 @@
 machine:
   services:
     - docker
-  python:
-    version: 2.7.10
   node:
     version: 4.2.6
   environment:
-    # Django
-    PIP_DISABLE_PIP_VERSION_CHECK: true
-    NOSE_WITH_XUNIT: true
-    NOSE_XUNIT_FILE: "$CIRCLE_TEST_REPORTS/django/nosetests.xml"
-    DATABASE_URL: postgres://ubuntu:@127.0.0.1:5432/circle_test
-    LOG_LEVEL: 40
-    ADMINS: '["thedude@example.com"]'
-    HMAC_KEYS: '{"2013-01-01": "prositneujahr"}'
     # Deis
     DEIS_CONTROLLER: https://deis.us-west.moz.works
     DEIS_USERNAME: circleci
@@ -37,28 +27,15 @@ dependencies:
   override:
     - npm install -g gulp-cli
     - npm install
-    - sudo apt-get update
-    - sudo apt-get install -y libmemcached-dev
-    - bin/upgrade-pip.sh
-    - pip install -r requirements/dev.txt
-    - pip install -r requirements/prod.txt
-    - pip install -r requirements/docker.txt
-    - pip install -r requirements/test.txt
-    - bin/circleci-demo-sync.sh
+    - bin/circleci-docker-build.sh
 
 test:
   pre:
-    - flake8 bedrock lib tests
-    - gulp js:lint
-    - python manage.py runscript check_calendars
-    - python manage.py version
-    - python manage.py migrate --noinput --database bedrock
-    - python manage.py collectstatic --noinput -v 0
     - mkdir -p "$CIRCLE_TEST_REPORTS/django"
   override:
+    - gulp js:lint
     - gulp js:test
-    - py.test lib bedrock
-    - py.test --junitxml="$CIRCLE_TEST_REPORTS/redirects.xml" -r a -m smoke tests/redirects
+    - make test-image
 
 deployment:
   demo:
