Fix bug 1315082: Retry git repos on failed db updates
Store the last successfully updated git hash in the
database. As long as we only update said hash upon
successful completion of an import it should try again
next time. Also switch product-details and security-
advisory import commands to simply update all files
when a git update is detected.

--- a/etc/supervisor_available/cron_db.conf
+++ b/etc/supervisor_available/cron_db.conf
@@ -1,5 +1,5 @@
 [program:cron_db]
-command = /app/bin/cron.py db
+command = /app/docker/run-clock.sh
 numprocs = 1
 autostart = true
 redirect_stderr = true
