--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "url": "https://bugzilla.mozilla.org/"
   },
   "devDependencies": {
+    "del": "^2.2.2",
     "eslint": "^2.8.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
