Deploy demos with Jenkins
* Disable circle demo deploy
* Add IRC notification to Jenkinsfile deployments
* Fix the deployment docs for new pipeline

--- a/.editorconfig
+++ b/.editorconfig
@@ -31,6 +31,9 @@ indent_size = 4
 [*.html]
 indent_size = 2
 
+[Jenkinsfile]
+indent_size = 4
+
 # Matches the exact files package.json and .travis.yml
 [{package.json, .travis.yml}]
 indent_size = 2
