--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
+    "gulp-stylelint": "^3.7.0",
     "gulp-watch": "^4.3.6",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
